--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <li class="header_menu_button _style_btn_menu">Виробництво</li>
                     <li class="header_menu_button _style_btn_menu">Про копчення</li>
                     <li class="header_menu_button _style_btn_menu">Продукти</li>
-                  <!--  <li class="header_menu_button _style_btn_menu">Де купити</li> -->
-                  <!--  <li class="header_menu_button _style_btn_menu">Контакти</li> -->
+                    <li class="header_menu_button _style_btn_menu">Де купити</li>
+                    <li class="header_menu_button _style_btn_menu">Контакти</li>
                 </ul>
             </nav>
         </header>
