--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 			<nav class="header_menu_container">
                 <ul class="header_menu_block">
                     <li class="header_menu_button _style_btn_menu">Знайомство</li>
-                    <li class="header_menu_button _style_btn_menu">Виробництво</li>
+               <!--   <li class="header_menu_button _style_btn_menu">Виробництво</li> -->
                     <li class="header_menu_button _style_btn_menu">Про копчення</li>
-                    <li class="header_menu_button _style_btn_menu">Продукти</li>
+               <!-- <li class="header_menu_button _style_btn_menu">Продукти</li> -->
                     <li class="header_menu_button _style_btn_menu">Де купити</li>
-                    <li class="header_menu_button _style_btn_menu">Контакти</li>
+               <!-- <li class="header_menu_button _style_btn_menu">Контакти</li> -->
                 </ul>
             </nav>
         </header>
