--- a/index.html
+++ b/index.html
@@ -111,5 +111,29 @@
        <footer class="footer">
            
         </footer>
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.3/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.3/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCjYMLOcL94rtorKX6_UB3okwb_S_pKyOI",
+    authDomain: "dymni-test-87f6b.firebaseapp.com",
+    projectId: "dymni-test-87f6b",
+    storageBucket: "dymni-test-87f6b.appspot.com",
+    messagingSenderId: "594025883227",
+    appId: "1:594025883227:web:7f032aaf1ec8b6544f417e",
+    measurementId: "G-QZF1RT8E5N"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
     </body>
 </html>
