--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
             <header class="header">
                 <div class="header__container">
-                    <a href="#"><img class="header__logo" src="/img/Без заголовка.png" alt="logo_dymni_tradicii"></a>
+                    <a href="/index.html"><img class="header__logo" src="/img/Без заголовка.png" alt="logo_dymni_tradicii"></a>
                     <div class="header__menu menu">
                         <div class="menu__icon">
                             <span></span>
@@ -42,8 +42,8 @@
                 <section class="page__section">
                     <div class="logo_baner_container">
                         <div class="logo_banner_block">
-                            <img class="logo_img_style" src="/img/Без заголовка.png" alt="Логотип Димні Традиції">
-                            <h5 class="text_logo_banner">Since 2018</h5>
+                            <!-- <img class="logo_img_style" src="/img/Без заголовка.png" alt="Логотип Димні Традиції"> -->
+                           <!-- <h5 class="text_logo_banner">Since 2018</h5> -->
                         </div>
                     </div>
                 </section>
@@ -166,9 +166,9 @@
                     <img class="inst_icon" src="/img/mycollection/png/004-instagram.png" alt="">
             </div>
             <div class="contact_block">
-                <p><span>Дзвони: </span>095 274 7886</p>
-                <p><span>Пиши: </span> dymni.tradicii@gmail.com</p>
-                <p><span>Заходь: </span>м. Київ, вул. Екскаваторна,24</p>
+                <p><span>Дзвони: </span>+38 050 065 2474</p>
+                <p><span>Пиши: </span> info@dymni-tradicii.com</p>
+                <p><span>Заходь: </span>м. Київ, вул. Єкскаваторна, 24</p>
             </div>
         </footer> 
 
