--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="format-detection" content="telephone=no">
     </head>
     
     <body>
