--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="ru">
     <head>
     <title>Димні Традиції</title>
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
@@ -156,6 +158,15 @@
                             <div class="logo_partners_item"><img src="/img/tavria_V.svg" alt=""></div>
                             <div class="logo_partners_item"><img src="/img/Velyka_kishenya.png" alt=""></div>
                             <div class="logo_partners_item"><img src="/img/winetime.svg" alt=""></div>
+                            <div class="view_more_btn_container">
+                                <a href="partners.html">
+                                    <button class="view_more_btn">
+                                        <h3>Адреси магазинів</h3>
+                                        <img class="view_more_arrow" src="/img/icons8-up-arrow-48.png" alt="">
+                                        <img class="view_more_arrow_hover" src="/img/icons8-up-arrow-30.png" alt="">
+                                    </button>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -179,10 +190,7 @@
                 <p><span>Заходь: </span>м. Київ, вул. Єкскаваторна, 24</p>
             </div>
         </footer> 
-        
     </body>
     <!--script-->
     <script src="burgerMenu.js"></script>
-   
-   
 </html>
