--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <img class="logo_footer" src="/img/Без заголовка.png" alt="">
             </div>
             <div class="social_network_icons_block">
-                    <img class="fb_icon" src="/img/mycollection/png/001-facebook.png" alt="">
-                    <img class="inst_icon" src="/img/mycollection/png/004-instagram.png" alt="">
+                    <a target="_blank" href="https://www.facebook.com/dymni.tradicii/"><img class="fb_icon" src="/img/social_icon/icon_facebook.png" alt=""></a> 
+                    <a target="_blank" href="https://www.instagram.com/dymni.tradicii/"><img class="inst_icon" src="/img/social_icon/icon_instagram.png" alt=""></a>
             </div>
             <div class="contact_block">
                 <p><span>Дзвони: </span>+38 050 065 2474</p>
