--- a/index.html
+++ b/index.html
@@ -139,7 +139,28 @@
 
                 </section>
 
-                <section id="page__section_4" class="page__section_4"></section>
+                <section id="page__section_4" class="page__section_4">
+                    <div class="products_block">
+                        <div class="title __anim-items">ПРОДУКТИ</div>
+                        <div class="fish_cut_container">
+                            <div class="fish_cut_row">
+                                <div class="product_fish_cut">
+                                    <div><img class="image_fish_cut" src="/img/fish_cut/04_01.jpeg" alt=""></div>
+                                    <h4 class="title_product_fish_cut">Філе лосося слабосолене нарізка 120 г.</h4>
+                                </div>
+                                <div class="product_fish_cut">
+                                    <div><img class="image_fish_cut" src="/img/fish_cut/04_02.jpeg" alt=""></div>
+                                    <h4 class="title_product_fish_cut">Філе лосося холодного копчення нарізка 120 г.</h4>
+                                </div>
+                                <div class="product_fish_cut">
+                                    <div><img class="image_fish_cut" src="/img/fish_cut/04_03.jpeg" alt=""></div>
+                                    <h4 class="title_product_fish_cut">Філе масляни холодного копчення нарізка 120 г.</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </section>
 
                 <section id="page__section_5" class="page__section_5">
                     <div class="partners_block">
