--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 <section id="page__section_4" class="page__section_4">
                     <div class="products_block">
                         <div class="title __anim-items">ПРОДУКТИ</div>
+                        <div class="subtitle __anim-items">Рибні наризки</div>
                         <div class="fish_cut_container">
                             <div class="fish_cut_row">
                                 <div class="product_fish_cut">
