--- a/index.html
+++ b/index.html
@@ -142,24 +142,89 @@
                 <section id="page__section_4" class="page__section_4">
                     <div class="products_block">
                         <div class="title __anim-items">ПРОДУКТИ</div>
+                        <div class="subtitle __anim-items">М'ясо</div>
+                        <div class="meat_container _mod_products_container">
+                            <div class="meat_row _mod_products_row">
+                                <div class="product_fish_cut">
+                                    <div><img class="image_product" src="/img/meat/01_02.jpeg" alt=""></div>
+                                    <h4 class="title_product">Биток яловичий гарячого копчення, ваговий</h4>
+                                </div>
+                                <div class="product_fish_cut">
+                                    <div><img class="image_product" src="/img/meat/01_04.jpeg" alt=""></div>
+                                    <h4 class="title_product">Сало домашнє копчене на фрукті, вагове</h4>
+                                </div>
+                                <div class="product_fish_cut">
+                                    <div><img class="image_product" src="/img/meat/01_06.jpeg" alt=""></div>
+                                    <h4 class="title_product">Філе Куряче гарячого копчення, вагове</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="subtitle __anim-items">Риба</div>
+                        <div class="fish_container _mod_products_container">
+                            <div class="fish_row _mod_products_row">
+                                <div class="product_fish_cut ">
+                                    <div><img class="image_product" src="/img/fish/02_01.jpeg" alt=""></div>
+                                    <h4 class="title_product">Гравлакс з апельсином шматок, ваговий</h4>
+                                </div>
+                                <div class="product_fish_cut">
+                                    <div><img class="image_product" src="/img/fish/02_04.jpeg" alt=""></div>
+                                    <h4 class="title_product">Дорадо середземноморське гарячого копчення, вагова</h4>
+                                </div>
+                                <div class="product_fish_cut">
+                                    <div><img class="image_product" src="/img/fish/02_05.jpeg" alt=""></div>
+                                    <h4 class="title_product">Окунь морський ісландський гарячого копчення, ваговий</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="subtitle __anim-items">М'ясні нарізки</div>
+                        <div class="meat_cut_container _mod_products_container">
+                            <div class="meat_cut_row _mod_products_row">
+                                <div class="product_fish_cut">
+                                    <div><img class="image_product" src="/img/meat_cut/03_01.jpeg" alt=""></div>
+                                    <h4 class="title_product">Нарізка м'ясна Філе Янтарне куряче сирокопчене 140 г.</h4>
+                                </div>
+                                <div class="product_fish_cut">
+                                    <div><img class="image_product" src="/img/meat_cut/03_02.jpeg" alt=""></div>
+                                    <h4 class="title_product">Нарізка м'ясна Бреазола з яловичини сиров'ялена 120 г.</h4>
+                                </div>
+                                <div class="product_fish_cut">
+                                    <div><img class="image_product" src="/img/meat_cut/03_03.jpeg" alt=""></div>
+                                    <h4 class="title_product">Нарізка м'ясна Бекон свинний гарячого копчення 120 г.</h4>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="subtitle __anim-items">Рибні нарізки</div>
-                        <div class="fish_cut_container">
-                            <div class="fish_cut_row">
+                        <div class="fish_cut_container _mod_products_container">
+                            <div class="fish_cut_row _mod_products_row">
                                 <div class="product_fish_cut">
-                                    <div><img class="image_fish_cut" src="/img/fish_cut/04_01.jpeg" alt=""></div>
-                                    <h4 class="title_product_fish_cut">Філе лосося слабосолене нарізка 120 г.</h4>
+                                    <div><img class="image_product" src="/img/fish_cut/04_01.jpeg" alt=""></div>
+                                    <h4 class="title_product">Філе лосося слабосолене нарізка 120 г.</h4>
                                 </div>
                                 <div class="product_fish_cut">
-                                    <div><img class="image_fish_cut" src="/img/fish_cut/04_02.jpeg" alt=""></div>
-                                    <h4 class="title_product_fish_cut">Філе лосося холодного копчення нарізка 120 г.</h4>
+                                    <div><img class="image_product" src="/img/fish_cut/04_02.jpeg" alt=""></div>
+                                    <h4 class="title_product">Філе лосося холодного копчення нарізка 120 г.</h4>
                                 </div>
                                 <div class="product_fish_cut">
-                                    <div><img class="image_fish_cut" src="/img/fish_cut/04_03.jpeg" alt=""></div>
-                                    <h4 class="title_product_fish_cut">Філе масляни холодного копчення нарізка 120 г.</h4>
+                                    <div><img class="image_product" src="/img/fish_cut/04_03.jpeg" alt=""></div>
+                                    <h4 class="title_product">Філе масляни холодного копчення нарізка 120 г.</h4>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                    <div class="view_more_btn_container _mod_btn_container">
+                        <a href="404.html">
+                            <button class="view_more_btn">
+                                <h3>Всі продукти</h3>
+                                <img class="view_more_arrow" src="/img/icons8-up-arrow-48.png" alt="">
+                                <img class="view_more_arrow_hover" src="/img/icons8-up-arrow-30.png" alt="">
+                            </button>
+                        </a>
+                    </div>
+                    
 
                 </section>
 
