--- a/index.html
+++ b/index.html
@@ -41,15 +41,18 @@
             </header>
             <!--main-->
             <main class="page">
-                
-                <section class="page__section">
-                    <div class="logo_baner_container">
-                        <div class="logo_banner_block">
-                            <!-- <img class="logo_img_style" src="/img/Без заголовка.png" alt="Логотип Димні Традиції"> -->
-                           <!-- <h5 class="text_logo_banner">Since 2018</h5> -->
+                <!--<div class="logo_baner_container">    </div>-->
+                    <div class="logo_banner_block">
+                        <div class="content_body">
+                            <img class="logo_img_style" src="/img/Без заголовка.png" alt="Логотип Димні Традиції">
+                            <h5 class="text_logo_banner">Since 2018</h5>
                         </div>
+                        <video autoplay muted loop preload="auto" class="full_screen__video">
+                            <source type="video/mp4" src="/video/start_video.mp4">
+                        </video>
                     </div>
-                </section>
+            
+
                 <section id="page__section_1" class="page__section_1" >
                     <div class="auquauntance_block">
                         <div class="title __anim-items">ДАВАЙТЕ ЗНАЙОМИТИСЯ!</div>
