--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                             <h5 class="text_logo_banner">Since 2018</h5>
                         </div>
                         <video autoplay muted loop preload="auto" class="full_screen__video">
+                            <source type="video/webm" src="/video/start_video.webm">
                             <source type="video/mp4" src="/video/start_video.mp4">
                         </video>
                     </div>
