--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <img class="logo_img_style" src="/img/Без заголовка.png" alt="Логотип Димні Традиції">
                             <h5 class="text_logo_banner">Since 2018</h5>
                         </div>
-                        <video autoplay muted loop playsinline webkit-playinginline class="full_screen__video">
+                        <video autoplay muted loop preload="auto" class="full_screen__video">
                             <source type="video/webm" src="/video/start_video.webm">
                             <source type="video/mp4" src="/video/start_video.mp4">
                         </video>
