--- a/index.html
+++ b/index.html
@@ -47,9 +47,21 @@
                             <img class="logo_img_style" src="/img/Без заголовка.png" alt="Логотип Димні Традиції">
                             <h5 class="text_logo_banner">Since 2018</h5>
                         </div>
-                        <video autoplay muted loop preload="auto" class="full_screen__video">
+                        <video autoplay muted loop poster="/video/poster_video.png" preload="auto" class="full_screen__video">
                             <source type="video/webm" src="/video/start_video.webm">
                             <source type="video/mp4" src="/video/start_video.mp4">
+                        </video>
+                    </div>
+
+                    <div class="logo_banner_block_mobile">
+                        <div class="content_body">
+                        </div>
+                    </div>
+
+                    <div class="logo_banner_block_video">
+                        <video controls muted preload="auto" class="full_screen__video">
+                            <source type="video/webm" src="/video/video_logo.webm">
+                            <source type="video/mp4" src="/video/video_logo.MP4">
                         </video>
                     </div>
             
@@ -127,20 +139,21 @@
                 </section>
 
                 <section id="page__section_3" class="page__section_3">
-                    <div class="smoking_history_block">
-                        <div class="title __anim-items">ПРО КОПЧЕННЯ</div>
-                        <div class="smoking_process_cintainer">
-                            <p class="text_smoking_process __anim-items _mod_text_smoking_1">Історія копчення налічує понад 1000 років. Копчення, як один із видів обробки продуктів, здавна служив для надання консервуючого ефекту. Продукти, яки коптили, отримували більш тривалий термін зберігання та оригінальний смак. У процесі маринування використовувалися різноманітні природні солі та спеції. У кожному регіоні світу існували свої рецепти копчення та свої загальновживані продукти, що коптили. Усі регіони світу об’єднувало одне - щоб досягти найкращого результату потрібно враховувати всі дрібниці, яких у такому складному процесі дуже багато.</p>
-                            <p class="text_smoking_process __anim-items _mod_text_smoking_2">Холодне копчення - це особливий спосіб приготування м'яса, сала, риби та птиці. Спочатку риба і м'ясо засолюються в солі та спеціях, що дозволяє продовжити термін їх зберігання. Сам процес копчення відбувається у температурному режимі 18-25 градусів. За такого способу продукти зберігають корисні речовини, необхідні нашому організму. Якщо говорити на прикладі, то з'їдаючи рибку холодного копчення ми отримуємо амінокислоти, а трапезуючи м'яском - запасаємося вітаміном В12.</p>
-                            <p class="text_smoking_process __anim-items _mod_text_smoking_3">Свіжі риба, м'ясо, птиця, морепродукти після гарячого копчення дадуть вам справжні відчуття первісного, глибоко захованого інстинкту задоволення вдалого полювання. Крім того, що це смачно, гаряче копчення найбезпечніше, т.к. передбачає термічну обробку продукту за високих температур.</p>
-                            <p class="text_smoking_process __anim-items _mod_text_smoking_4">Ретельно відібрані фермерські господарства щотижня поставляють до нашого виробництва найкращу сировину, яку ми з любов’ю коптимо за власними рецептами до Вашого столу. Ми маринуємо м’яско протягом тижня перед тим, як його закоптити, таким чином ми впевненні, що продукт стає соковитим та має неповторний смак. Ми використовуємо для маринування лише відбірну сировину та натуральні спеції. 
-                                М’яско дозріває у спеціальних маринувальних кімнатах у відповідних умовах.
-                                Ми коптимо на деревині з екологічних районів Закарпаття (черешня, бук, вільха та звичайно дуб) на сучасному обладнанні, яке дозволяє робити продукт не тільки дуже смачним, але й корисним та безпечним.
-                                У процессі копчення ми маємо можливість регулювати кількість диму, тому м’яско не перекопчене та водночас дуже ароматне. До кожного типу сировини своя складна технологія обробки.
-                            </p>
+                    <div class="smoking_history_block_bg_color">
+                        <div class="smoking_history_block">
+                            <div class="title __anim-items _modificator_titile">ПРО КОПЧЕННЯ</div>
+                            <div class="smoking_process_cintainer">
+                                <p class="text_smoking_process __anim-items _mod_text_smoking_1">Історія копчення налічує понад 1000 років. Копчення, як один із видів обробки продуктів, здавна служив для надання консервуючого ефекту. Продукти, яки коптили, отримували більш тривалий термін зберігання та оригінальний смак. У процесі маринування використовувалися різноманітні природні солі та спеції. У кожному регіоні світу існували свої рецепти копчення та свої загальновживані продукти, що коптили. Усі регіони світу об’єднувало одне - щоб досягти найкращого результату потрібно враховувати всі дрібниці, яких у такому складному процесі дуже багато.</p>
+                                <p class="text_smoking_process __anim-items _mod_text_smoking_2">Холодне копчення - це особливий спосіб приготування м'яса, сала, риби та птиці. Спочатку риба і м'ясо засолюються в солі та спеціях, що дозволяє продовжити термін їх зберігання. Сам процес копчення відбувається у температурному режимі 18-25 градусів. За такого способу продукти зберігають корисні речовини, необхідні нашому організму. Якщо говорити на прикладі, то з'їдаючи рибку холодного копчення ми отримуємо амінокислоти, а трапезуючи м'яском - запасаємося вітаміном В12.</p>
+                                <p class="text_smoking_process __anim-items _mod_text_smoking_3">Свіжі риба, м'ясо, птиця, морепродукти після гарячого копчення дадуть вам справжні відчуття первісного, глибоко захованого інстинкту задоволення вдалого полювання. Крім того, що це смачно, гаряче копчення найбезпечніше, т.к. передбачає термічну обробку продукту за високих температур.</p>
+                                <p class="text_smoking_process __anim-items _mod_text_smoking_4">Ретельно відібрані фермерські господарства щотижня поставляють до нашого виробництва найкращу сировину, яку ми з любов’ю коптимо за власними рецептами до Вашого столу. Ми маринуємо м’яско протягом тижня перед тим, як його закоптити, таким чином ми впевненні, що продукт стає соковитим та має неповторний смак. Ми використовуємо для маринування лише відбірну сировину та натуральні спеції. 
+                                    М’яско дозріває у спеціальних маринувальних кімнатах у відповідних умовах.
+                                    Ми коптимо на деревині з екологічних районів Закарпаття (черешня, бук, вільха та звичайно дуб) на сучасному обладнанні, яке дозволяє робити продукт не тільки дуже смачним, але й корисним та безпечним.
+                                    У процессі копчення ми маємо можливість регулювати кількість диму, тому м’яско не перекопчене та водночас дуже ароматне. До кожного типу сировини своя складна технологія обробки.
+                                </p>
+                            </div>
                         </div>
                     </div>
-
                 </section>
 
                 <section id="page__section_4" class="page__section_4">
@@ -236,19 +249,17 @@
                     <div class="partners_block">
                         <div class="title __anim-items">ДЄ ПРИДБАТИ?</div>
                         <div class="partners_grid_container">
-                            <div class="logo_partners_item" ><img src="/img/Auchan_logo.svg" alt="" class="logo_partners_item_setup"></div>
-                            <div class="logo_partners_item"><img src="/img/varus_logo.svg" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/novus_logo.png" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/fora.png" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/boxmarket.png" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/Silpo_logo.png" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/eco_lavka.svg" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/MegaMarket.svg" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/Pchelka.png" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/kolo.svg" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/tavria_V.svg" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/Velyka_kishenya.png" alt=""></div>
-                            <div class="logo_partners_item"><img src="/img/winetime.svg" alt=""></div>
+                            <div class="logo_partners_item" ><img src="/img/logo_partners/lavka_tradyciy.png" alt="" class="logo_partners_item_setup-lavka_tradiciy"></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/Silpo_logo.png" alt=""></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/fora.png" alt=""></div>
+                            <div class="logo_partners_item" ><img src="/img/logo_partners/Auchan_logo.svg" alt="" class="logo_partners_item_setup"></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/novus_logo.png" alt=""></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/varus_logo.svg" alt=""></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/MegaMarket.svg" alt=""></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/Velyka_kishenya.png" alt=""></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/winetime.svg" alt=""></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/boxmarket.png" alt=""></div>
+                            <div class="logo_partners_item"><img src="/img/logo_partners/Pchelka.png" alt=""></div>                            
                             <div class="view_more_btn_container">
                                 <a href="partners.html">
                                     <button class="view_more_btn">
@@ -278,7 +289,6 @@
             <div class="contact_block">
                 <p><span>Дзвони: </span>+38 050 065 2474</p>
                 <p><span>Пиши: </span> info@dymni-tradicii.com</p>
-                <p><span>Заходь: </span>м. Київ, вул. Єкскаваторна, 24</p>
             </div>
         </footer> 
     </body>
