--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
 
                     <div class="logo_banner_block_video">
-                        <video controls muted preload="auto" class="full_screen__video">
+                        <video controls muted poster="/video/poster_video_mobile.png" preload="auto" class="full_screen__video">
                             <source type="video/webm" src="/video/video_logo.webm">
                             <source type="video/mp4" src="/video/video_logo.MP4">
                         </video>
