--- a/index.html
+++ b/index.html
@@ -162,17 +162,21 @@
                         <div class="subtitle __anim-items">М'ясо</div>
                         <div class="meat_container _mod_products_container">
                             <div class="meat_row _mod_products_row">
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/meat/01_02.jpeg" alt=""></div>
-                                    <h4 class="title_product">Биток яловичий гарячого копчення, ваговий</h4>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/meat/01_01.jpg" alt=""></div>
+                                    <h4 class="title_product">Філе качине копчене на фруктовій трісці, вагове</h4>
                                 </div>
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/meat/01_04.jpeg" alt=""></div>
-                                    <h4 class="title_product">Сало домашнє копчене на фрукті, вагове</h4>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/meat/01_02.jpg" alt=""></div>
+                                    <h4 class="title_product">Філе індички копчене на фруктовій трісці, вагове</h4>
                                 </div>
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/meat/01_06.jpeg" alt=""></div>
-                                    <h4 class="title_product">Філе Куряче гарячого копчення, вагове</h4>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/meat/01_03.jpg" alt=""></div>
+                                    <h4 class="title_product">Сало по домашньому з часником та травами, вагове</h4>
+                                </div>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/meat/01_04.jpg" alt=""></div>
+                                    <h4 class="title_product">Биток телячий копчений на фруктовій трісці, ваговий</h4>
                                 </div>
                             </div>
                         </div>
@@ -180,17 +184,21 @@
                         <div class="subtitle __anim-items">Риба</div>
                         <div class="fish_container _mod_products_container">
                             <div class="fish_row _mod_products_row">
-                                <div class="product_fish_cut ">
-                                    <div><img class="image_product" src="/img/fish/02_01.jpeg" alt=""></div>
-                                    <h4 class="title_product">Гравлакс з апельсином шматок, ваговий</h4>
+                                <div class="product_container ">
+                                    <div><img class="image_product" src="/img/fish/02_01.jpg" alt=""></div>
+                                    <h4 class="title_product">Гравлакс в апельсиновому маринаді, ваговий</h4>
                                 </div>
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/fish/02_04.jpeg" alt=""></div>
-                                    <h4 class="title_product">Дорадо середземноморське гарячого копчення, вагова</h4>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/fish/02_02.jpg" alt=""></div>
+                                    <h4 class="title_product">Філе лосося по-марокканськи, вагове</h4>
                                 </div>
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/fish/02_05.jpeg" alt=""></div>
-                                    <h4 class="title_product">Окунь морський ісландський гарячого копчення, ваговий</h4>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/fish/02_03.jpg" alt=""></div>
+                                    <h4 class="title_product">Філе лосося слабосолене, вагове</h4>
+                                </div>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/fish/02_04.jpg" alt=""></div>
+                                    <h4 class="title_product">Скумбрія шотландська копчена на буковій трісци, вагова</h4>
                                 </div>
                             </div>
                         </div>
@@ -198,17 +206,21 @@
                         <div class="subtitle __anim-items">М'ясні нарізки</div>
                         <div class="meat_cut_container _mod_products_container">
                             <div class="meat_cut_row _mod_products_row">
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/meat_cut/03_01.jpeg" alt=""></div>
-                                    <h4 class="title_product">Нарізка м'ясна Філе Янтарне куряче сирокопчене 140 г.</h4>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/meat_cut/03_01.jpg" alt=""></div>
+                                    <h4 class="title_product">Панчетта по українськи з італійськими травами, 140 г.</h4>
                                 </div>
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/meat_cut/03_02.jpeg" alt=""></div>
-                                    <h4 class="title_product">Нарізка м'ясна Бреазола з яловичини сиров'ялена 120 г.</h4>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/meat_cut/03_02.jpg" alt=""></div>
+                                    <h4 class="title_product">Бекон угоррський сирокопчений, 140 г.</h4>
                                 </div>
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/meat_cut/03_03.jpeg" alt=""></div>
-                                    <h4 class="title_product">Нарізка м'ясна Бекон свинний гарячого копчення 120 г.</h4>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/meat_cut/03_03.jpg" alt=""></div>
+                                    <h4 class="title_product">Гранд філе з яловичини сирокопчене, 120 г.</h4>
+                                </div>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/meat_cut/03_04.jpg" alt=""></div>
+                                    <h4 class="title_product">Філе індички сирокопчене, вагове</h4>
                                 </div>
                             </div>
                         </div>
@@ -216,17 +228,21 @@
                         <div class="subtitle __anim-items">Рибні нарізки</div>
                         <div class="fish_cut_container _mod_products_container">
                             <div class="fish_cut_row _mod_products_row">
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/fish_cut/04_01.jpeg" alt=""></div>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/fish_cut/04_01.jpg" alt=""></div>
                                     <h4 class="title_product">Філе лосося слабосолене нарізка 120 г.</h4>
                                 </div>
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/fish_cut/04_02.jpeg" alt=""></div>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/fish_cut/04_02.jpg" alt=""></div>
                                     <h4 class="title_product">Філе лосося холодного копчення нарізка 120 г.</h4>
                                 </div>
-                                <div class="product_fish_cut">
-                                    <div><img class="image_product" src="/img/fish_cut/04_03.jpeg" alt=""></div>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/fish_cut/04_03.jpg" alt=""></div>
                                     <h4 class="title_product">Філе масляни холодного копчення нарізка 120 г.</h4>
+                                </div>
+                                <div class="product_container">
+                                    <div><img class="image_product" src="/img/fish_cut/04_04.jpg" alt=""></div>
+                                    <h4 class="title_product">Гравлакс з лосося з кропом, 120 г.</h4>
                                 </div>
                             </div>
                         </div>
