--- a/index.html
+++ b/index.html
@@ -249,11 +249,12 @@
                     </div>
 
                     <div class="view_more_btn_container _mod_btn_container">
-                        <a href="404.html">
+                        <a href="/products.html">
                             <button class="view_more_btn">
                                 <h3>Всі продукти</h3>
                                 <img class="view_more_arrow" src="/img/icons8-up-arrow-48.png" alt="">
                                 <img class="view_more_arrow_hover" src="/img/icons8-up-arrow-30.png" alt="">
+                            
                             </button>
                         </a>
                     </div>
