--- a/partners.html
+++ b/partners.html
@@ -435,6 +435,6 @@
         </footer> 
     </body>
     <!--script-->
-    <script src=burgerMenuOtherPage.js></script>
+    <script src="burgerMenuOtherPage.js"></script>
   
 </html>
