--- a/index.html
+++ b/index.html
@@ -290,7 +290,18 @@
                     </div>
                 </section>
         
-                <section id="page__section_6" class="page__section page__section_6"></section>
+                <section id="page__section_6" class="page__section page__section_6">
+                    <div class="about_container">
+                        <div class="about_block_img">
+                            <img class="about_img" src="/img/about/about_img.jpg" alt="">
+                        </div>
+                        <div class="about_block_text">
+                            <div class="about_block_title">Димні традиції - це крафтова коптильня, яка виробляє смачну продукцію за традиційними рецептами на сучасному обладнанні, згідно встановлених норм безпечного виробництва. <br>
+                                До своїх страв ми обираємо лише відбірні продукти, дим з правильних порід деревини, спеції та творче натхнення!</div>
+                            <div class="about_block_subtitle">Дмитро Філатов</div>
+                        </div>
+                    </div>
+                </section>
                 <script src="scrollAnimation.js"></script>
             </main>
         </div>
