--- a/products.html
+++ b/products.html
@@ -50,28 +50,30 @@
                     <div class="meat_container _mod_products_container">
                         <div class="meat_row _mod_products_row _mod_products_row-product_page">
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product image_product-product_page" src="/img/meat/01_01.jpg" alt=""></div>
+                                <div><img class="image_product image_product-product_page" src="/img/products/p_1/p_1_1.jpg" alt=""></div>
                                 <h4 class="title_product title_product-product_page">Філе качине копчене на фруктовій трісці, вагове</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat/01_02.jpg" alt=""></div>
+                                <div><img class="image_product" src="/img/products/p_1/p_1_2.jpg" alt=""></div>
                                 <h4 class="title_product title_product-product_page">Філе індички копчене на фруктовій трісці, вагове</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat/01_03.jpg" alt=""></div>
+                                <div><img class="image_product" src="/img/products/p_1/p_1_3.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Філе куряче копчене на фруктовій трісці, вагове</h4>
+                            </div>
+                            <div class="product_container product_container-product_page">
+                                <div><img class="image_product" src="/img/products/p_1/p_1_4.jpg" alt=""></div>
                                 <h4 class="title_product title_product-product_page">Сало по домашньому з часником та травами, вагове</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat/01_04.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Биток телячий копчений на фруктовій трісці, ваговий</h4>
+                                <div><img class="image_product" src="/img/products/p_1/p_1_5.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Сало копчене на фруктовий трісці, вагове</h4>
                             </div>
-
-
-
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat/01_04.jpg" alt=""></div>
+                                <div><img class="image_product" src="/img/products/p_1/p_1_7.jpg" alt=""></div>
                                 <h4 class="title_product title_product-product_page">Биток телячий копчений на фруктовій трісці, ваговий</h4>
                             </div>
+
 
 
 
@@ -82,47 +84,37 @@
                     <div class="fish_container _mod_products_container">
                         <div class="fish_row _mod_products_row _mod_products_row-product_page">
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_01.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Гравлакс в апельсиновому маринаді, ваговий</h4>
+                                <div><img class="image_product" src="/img/products/p_2/p_2_1.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page product_container">Гравлакс в апельсиновому маринаді, ваговий</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_02.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page product_container product_container-product_page-product_page">Філе лосося по-марокканськи, вагове</h4>
+                                <div><img class="image_product" src="/img/products/p_2/p_2_2.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page product_container ">Гравлакс тропікано з манго, ваговий</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_03.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Філе лосося слабосолене, вагове</h4>
+                                <div><img class="image_product" src="/img/products/p_2/p_2_3.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Гравлакс класичний, ваговий</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_04.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Скумбрія шотландська копчена на буковій трісци, вагова</h4>
-                            </div>
-
-
-
-                            <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_01.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Гравлакс в апельсиновому маринаді, ваговий</h4>
-                            </div>
-                            <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_02.jpg" alt=""></div>
+                                <div><img class="image_product" src="/img/products/p_2/p_2_4.jpg" alt=""></div>
                                 <h4 class="title_product title_product-product_page">Філе лосося по-марокканськи, вагове</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_03.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Філе лосося слабосолене, вагове</h4>
+                                <div><img class="image_product" src="/img/products/p_2/p_2_5 .jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Філе лосося слабосолоне, вагове</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_04.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Скумбрія шотландська копчена на буковій трісци, вагова</h4>
+                                <div><img class="image_product" src="/img/products/p_2/p_2_6.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Лосось холодного копчення, ваговий</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/fish/02_04.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Скумбрія шотландська копчена на буковій трісци, вагова</h4>
+                                <div><img class="image_product" src="/img/products/p_2/p_2_7.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Скумбрія шотландська холодного копчення, вагова</h4>
                             </div>
-
-
-
+                            <div class="product_container product_container-product_page">
+                                <div><img class="image_product" src="/img/products/p_2/p_2_8.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Скумбрія шотландська горячого копчення на буковій трісці, вагова</h4>
+                            </div>
                         </div>
                     </div>
 
@@ -130,43 +122,40 @@
                     <div class="meat_cut_container _mod_products_container">
                         <div class="meat_cut_row _mod_products_row _mod_products_row-product_page">
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_01.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Панчетта по українськи з італійськими травами, 140 г.</h4>
+                                <div><img class="image_product" src="/img/products/p_3/p_3_1.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Брезаола яловичина сиров'ялена</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_02.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Бекон угоррський сирокопчений, 140 г.</h4>
+                                <div><img class="image_product" src="/img/products/p_3/p_3_2.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Гранд філе з яловичини сирокопчене</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_03.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Гранд філе з яловичини сирокопчене, 120 г.</h4>
+                                <div><img class="image_product" src="/img/products/p_3/p_3_5.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Бекон угорський сирокопчений</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_04.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Філе індички сирокопчене, вагове</h4>
-                            </div>
-
-
-
-                            <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_01.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Панчетта по українськи з італійськими травами, 140 г.</h4>
+                                <div><img class="image_product" src="/img/products/p_3/p_3_6.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Сало по домашньому з часником та перцем</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_02.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Бекон угоррський сирокопчений, 140 г.</h4>
+                                <div><img class="image_product" src="/img/products/p_3/p_3_7.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Філе індички сирокопчене</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_03.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Гранд філе з яловичини сирокопчене, 120 г.</h4>
+                                <div><img class="image_product" src="/img/products/p_3/p_3_8.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Пачетта по-українськи з італийськими травами</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_04.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Філе індички сирокопчене, вагове</h4>
+                                <div><img class="image_product" src="/img/products/p_3/p_3_9.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Бекон копчений</h4>
                             </div>
                             <div class="product_container product_container-product_page">
-                                <div><img class="image_product" src="/img/meat_cut/03_04.jpg" alt=""></div>
-                                <h4 class="title_product title_product-product_page">Філе індички сирокопчене, вагове</h4>
+                                <div><img class="image_product" src="/img/products/p_3/p_3_10.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Бекон угорський</h4>
+                            </div>
+                            <div class="product_container product_container-product_page">
+                                <div><img class="image_product" src="/img/products/p_3/p_3_11.jpg" alt=""></div>
+                                <h4 class="title_product title_product-product_page">Бекон свиний</h4>
                             </div>
 
 
