--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                 </section>
-                <script src="scrollAnimation.js"></script>
+               
             </main>
         </div>
         <!--footer-->
@@ -321,5 +321,6 @@
         </footer> 
     </body>
     <!--script-->
-    <script src="burgerMenu.js"></script>
+    <script src="/js/burgerMenu.js"></script>
+    <script src="/js/scrollAnimation.js"></script>
 </html>
