--- a/products.html
+++ b/products.html
@@ -205,5 +205,5 @@
     </body>
     <!--script-->
     <script src="burgerMenuOtherPage.js"></script>
-    <script src="scrollAnimation.js"></script>
+    <script src="/js/scrollAnimation.js"></script>
 </html>
